0.06
 - Add set_split_params() subroutine.
 - Add split_params() subroutine.
 - Fix dependencies in DEPENDENCIES section in doc.

0.05 2013-10-01
 - Fix tests in last version.

0.04 2013-09-30
 - Documentation update.
 - Add Test::NoWarnings to tests.
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.03 2012-07-15
 - Update build system.
 - Add examples/ directory.
 - Fix Makefile.PL to META 1.4.

0.02 2011-08-03
 - Better AUTHOR section in doc.
 - Fix tests with Test::Pod for perl lesser than 5.8.0.
 - Remove obsolete ';' in code.
 - Remove "(3pm)" from pod doc.

0.01 2011-07-14
 - First version.